--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "firebase": "^10.12.5",
+    "react-router-dom": "^6.26.0",
     "vue": "^3.2.16"
   },
   "devDependencies": {
